# home_automation

./: .flake8  .gitignore  COMMANDS  LICENSE  README.md  RF_SNIFFER_GUIDE.md  config.json  lamp_control_mqtt.py  mqtt_lamp_control_rf.service  mqtt_send_rf.service  pi_lamp_service_control.sh  pyproject.toml  requirements-test.txt  requirements.txt  rf_receive_mqtt.py  rf_sniffer.py  send_mqtt.py  test_lamp_control.py
.github/workflows/: test.yml
rfchat/: gpio_status.py  nohup.out  receive.py  send.py
scripts/: install_pkgs.sh
